[gd_scene load_steps=2 format=3 uid="uid://dvq43tw4hi8bs"]

[ext_resource type="Script" path="res://utils/load_game/load_game.gd" id="1_xmwf5"]

[node name="load_game" type="Window"]
initial_position = 2
size = Vector2i(800, 400)
script = ExtResource("1_xmwf5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="games" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll_container" type="ScrollContainer" parent="VBoxContainer/games"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="SAVES_LIST" type="ItemList" parent="VBoxContainer/games/scroll_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
auto_height = true

[node name="GAME_DATA" type="VBoxContainer" parent="VBoxContainer/games"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="thumbnail" type="TextureRect" parent="VBoxContainer/games/GAME_DATA"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 6

[node name="difficulty" type="Label" parent="VBoxContainer/games/GAME_DATA"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="level" type="Label" parent="VBoxContainer/games/GAME_DATA"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="time" type="Label" parent="VBoxContainer/games/GAME_DATA"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="LOAD" type="Button" parent="VBoxContainer/games/GAME_DATA"]
layout_mode = 2
size_flags_horizontal = 3
text = "LOAD"

[node name="DELETE" type="Button" parent="VBoxContainer/games/GAME_DATA"]
layout_mode = 2
size_flags_horizontal = 3
text = "DELETE"

[node name="CANCEL" type="Button" parent="VBoxContainer/games/GAME_DATA"]
layout_mode = 2
size_flags_horizontal = 3
text = "CANCEL"
